assets/css/dashboard-css-2024.css
/* ... */
.dark-mode .toggle-container:hover {
    text-decoration: none;
    color: #DBDBDB;
}

.dark-mode .caliweb-card.dashboard-card.account-center-cards {
    padding: 4% !important;
    box-shadow: rgba(37, 37, 37, 0.2) 0px 2px 8px 0px;
    background-color: #222222;
    border:1px solid #333;
}

.dark-mode .drop-menu-item-sidebar,
.dark-mode .sidebar-link-a .drop-menu-item-sidebar,
.dark-mode .sidebar-link-a {
    color:#dbdbdb !important;
}

.dark-mode .with-border-special {
    border:1px solid #222;
}

.dark-mode .caliweb-web-manage-btn {
    border: 1px solid #303030;
    background-color: #303030;
    padding: 20px;
    border-radius: 10px;
    transition: all 0.3s ease-in-out;
    backdrop-filter: blur(5px);
}

.dark-mode .caliweb-web-manage-btn:hover {
    border: 1px solid #676cff;
    background-color: #0e0e0e;
    box-shadow: none;
    backdrop-filter: blur(5px);
}

.dark-mode .dropdown {
    background-color: #000;
    border: 1px solid #111;
}

.dark-mode .dropdown .nav-links:hover {
    border: 1px solid #333 !important;
}

.dark-mode .dashboard-system-status:hover {
    background-color: #212121;
}

.dark-mode .dark-mode-white {
    color: #dbdbdb !important;
}

.dark-mode .dark-mode-white:hover {
    color: #fff !important;
}

.dark-mode .caliweb-error-box,
.dark-mode .caliweb-error-box p,
.dark-mode .caliweb-error-box h3 {
    color: black !important;
}

.dark-mode .profileImage {
    border: 1px solid #222 !important;
}

.dark-mode .profile-block:hover {
    background-color: #232323;
}

.dark-mode .border-top-grey-300 {
    border-top: 1px solid #222 !important;
}

.dark-mode .background-darker-300 {
    background-color: #0a0a0a !important;
}

.dark-mode .caliweb-button.primary {
    color: #000 !important;
    background-color: #9dd0ff !important;
}

.dark-mode .caliweb-button.primary:hover {
    color: #000 !important;
    background-color: #79bbfa !important;
}

.dark-mode .nav-links.active {
    background-color: #9dd0ff;
    color: #000 !important;
}

.dark-mode .nav-links-clickable.active {
    color: #000 !important;
}

.dark-mode .nav-links.active:hover,
.dark-mode .nav-links-clickable.active:hover {
    color: #000 !important;
}

.dark-mode .filter-white-on-dark {
    filter: invert(1) !important;
}

.dark-mode .log-entry {
    border-bottom: 1px solid #444;
}

/* =================== Nexure Dashboard Grid Styles =================== */

.special-caliweb-spacing {
    grid-row-gap: 10px !important;
    grid-column-gap: 10px !important;
}

.customer-grid-quick-actions {
    grid-row-gap: 40px !important;
    grid-column-gap: 40px !important;
}

.account-grid-modified {
    -ms-grid-columns: 1.5fr .5fr;
    grid-template-columns: 1.5fr .5fr;
}

.profile-grid-modified {
    -ms-grid-columns: .5fr 1fr .5fr;
    grid-template-columns: .5fr 1fr .5fr;
}

.email-grid {
    -ms-grid-columns: .5fr 1.5fr;
    grid-template-columns: .5fr 1.5fr;
}

/* =================== Nexure Dashboard Section Styles =================== */

.section {
    padding-top: 20px;
    padding-bottom: 20px;
}

/* =================== Nexure Dashboard Three Card Styles =================== */

.caliweb-card.dashboard-card {
    background: #f9f9f9;
    border: 1px solid #ddd;
    border-radius: 6px;
    padding: 20px;
}

.caliweb-card.dashboard-card-shrink {
    background: #f9f9f9;
    border: 1px solid #ddd;
    border-radius: 6px;
    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;
}

.note-card {
    margin-bottom: 15px;
}

.card-header {
    padding-top: 0px;
    padding-bottom: 10px;
    margin-bottom: 4%;
}

.card-header-account {
    background-color: #f1f1f1;
    padding: 10px;
    padding-left:20px;
    border-radius: 6px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    border-bottom: 1px solid #eee;
    margin-bottom: 2.5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.card-header-services {
    background-color: #f1f1f1;
    padding: 20px;
    border-radius: 6px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    border-bottom: 1px solid #eee;
    margin-bottom: 2.5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}


.settings-header {
    background-color: #f1f1f1;
    padding: 20px;
    padding-left:20px;
    border-radius: 6px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    border-bottom: none;
    margin-bottom: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.client-business-andor-profile-logo {
    height: 100%;
    width: 100%;
    border-radius: 5px;
}

.icon-size-formatted {
    height: 45px;
    width: 45px;
    border-radius: 5px;
    border: 1px solid #ddd;
}

.nexure-step-progress-container {
    display: flex;
    position: relative;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 700px;
    margin: 20px auto;
    padding: 10px 0;
}
  
.nexure-progress-step {
    position: relative;
    text-align: center;
    flex: 1;
    font-size: 14px;
    padding-bottom: 10px;
    color: gray;
}
  
.nexure-progress-step.active {
    font-weight: bold;
    color: black;
}
  
.nexure-progress-step::after {
    content: "";
    position: absolute;
    width: 10px;
    height: 10px;
    background-color: gray;
    border-radius: 50%;
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
}
  
.nexure-step-progress-container::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 4px;
    background: lightgray;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    z-index: 0;
}
/* ... */

